Changing name files

--- a/index.html
+++ b/index.html
@@ -1,17 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>
-<html lang="ru" class="lt-ie9 lt-ie8 lt-ie7">
-	<![endif]-->
-<!--[if IE 7]>
-	<html lang="ru" class="lt-ie9 lt-ie8">
-		<![endif]-->
-<!--[if IE 8]>
-		<html lang="ru" class="lt-ie9">
-			<![endif]-->
-<!--[if gt IE 8]>
-			<!-->
 <html lang="ru">
-<!--<![endif]-->
 
 <head>
 	<meta charset="utf-8" />
@@ -22,7 +10,7 @@
 	<link rel="stylesheet" href="libs/bootstrap/bootstrap-grid-3.3.1.min.css" />
 	<link rel="stylesheet" href="libs/font-awesome-4.6.3/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="css/fonts.css" />
-	<link rel="stylesheet" href="css/main.css" />
+	<link rel="stylesheet" href="css/style.css" />
 	<link rel="stylesheet" href="css/media.css" />
 </head>
 
@@ -34,13 +22,13 @@
 		<nav>
 			<ul>
 				<li>
-					<a href="">label</a>
+					<a href="">label-1</a>
 				</li>
 				<li>
-					<a href="">label</a>
+					<a href="">label-2</a>
 				</li>
 				<li>
-					<a href="">label</a>
+					<a href="">label-3</a>
 				</li>
 			</ul>
 		</nav>
